methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:1: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono1:1: error: expected start of definition
override def run() {
         ^PictureMono1:7: error: expected class or object definition
def marqueSol(){
^PictureMono1:12: error: expected class or object definition
def faireV(){
^